--- a/front-end/src/components/ui/ingredient-card/ingredient-card.css
+++ b/front-end/src/components/ui/ingredient-card/ingredient-card.css
@@ -2,7 +2,6 @@
 .ingredient-card {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
   padding: 0.75rem;
   border: 1px solid #e5e7eb;
@@ -12,7 +11,7 @@
   cursor: pointer;
   transition: background-color 0.2s;
   height: 100px;
-  width: 400px;
+  width: 450px;
 }
 
 .ingredient-card:hover {
@@ -28,6 +27,7 @@
   aspect-ratio: 1/1;
   background-color: #d1d5db;
   border-radius: 0.375rem;
+  margin-right: 1.5rem;
 }
 
 .ingredient-card .details {
@@ -35,18 +35,43 @@
   display: flex;
   flex-direction: column;
   gap: 0.1rem;
+  margin-right: 1.5rem;
 }
 
 .ingredient-card .details h2 {
   font-size: 1.25rem;
   font-weight: bold;
+  padding-bottom: 0.5rem;
+  margin: 0;
+}
+
+.ingredient-card .nutrition {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  border: 2px solid #e5e7eb;
+  border-radius: 0.5rem;
+  gap: 0.1rem;
+}
+
+.ingredient-card .nutrition p {
+  font-size: 0.875rem;
   line-height: 1.2;
   margin: 0;
 }
 
-.ingredient-card .details p {
+.ingredient-card .macros {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  border: 2px solid #e5e7eb;
+  border-radius: 0.5rem;
+  gap: 0.1rem;
+}
+
+.ingredient-card .macros p {
   font-size: 0.875rem;
-  line-height: 1.2;
+  line-height: 1.5;
   margin: 0;
 }
 
