--- a/front-end/src/components/ui/ingredient-card/ingredient-card.css
+++ b/front-end/src/components/ui/ingredient-card/ingredient-card.css
@@ -11,7 +11,7 @@
   cursor: pointer;
   transition: background-color 0.2s;
   height: 100px;
-  width: 450px;
+  width: 95%;
 }
 
 .ingredient-card:hover {
@@ -28,6 +28,15 @@
   background-color: #d1d5db;
   border-radius: 0.375rem;
   margin-right: 1.5rem;
+  overflow: hidden;
+  position: relative;
+}
+
+.ingredient-card .ingredient-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0.375rem;
 }
 
 .ingredient-card .details {
@@ -36,6 +45,11 @@
   flex-direction: column;
   gap: 0.1rem;
   margin-right: 1.5rem;
+}
+
+.ingredient-card .details .label {
+  display: flex;
+  flex-direction: row;
 }
 
 .ingredient-card .details h2 {
@@ -75,7 +89,17 @@
   margin: 0;
 }
 
-.ingredient-card .icon {
-  width: 2rem;
-  height: 2rem;
+.icon {
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
+}
+
+.food-icon {
+  font-size: 1.5rem;
+  line-height: 1;
 }
