--- a/front-end/src/components/ui/ingredient-card/ingredient-card.css
+++ b/front-end/src/components/ui/ingredient-card/ingredient-card.css
@@ -10,8 +10,9 @@
   color: white;
   cursor: pointer;
   transition: background-color 0.2s;
-  height: 100px;
-  width: 95%;
+  height: 120px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .ingredient-card:hover {
@@ -23,7 +24,7 @@
 }
 
 .ingredient-card .image-placeholder {
-  height: 95%;
+  height: 100%;
   aspect-ratio: 1/1;
   background-color: #d1d5db;
   border-radius: 0.375rem;
@@ -40,11 +41,11 @@
 }
 
 .ingredient-card .details {
-  height: 95%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 0.1rem;
-  margin-right: 1.5rem;
+  margin-right: 1.4rem;
 }
 
 .ingredient-card .details .label {
@@ -55,14 +56,14 @@
 .ingredient-card .details h2 {
   font-size: 1.25rem;
   font-weight: bold;
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.3rem;
   margin: 0;
 }
 
 .ingredient-card .nutrition {
   display: flex;
   flex-direction: column;
-  padding: 0.5rem;
+  padding: 0.2rem;
   border: 2px solid #e5e7eb;
   border-radius: 0.5rem;
   gap: 0.1rem;
@@ -77,7 +78,7 @@
 .ingredient-card .macros {
   display: flex;
   flex-direction: column;
-  padding: 0.5rem;
+  padding: 0.2rem;
   border: 2px solid #e5e7eb;
   border-radius: 0.5rem;
   gap: 0.1rem;
