--- a/front-end/src/components/ui/ingredient-card/IngredientCard.module.css
+++ b/front-end/src/components/ui/ingredient-card/IngredientCard.module.css
@@ -1,5 +1,5 @@
 /* IngredientCard.css */
-.ingredient-card {
+.ingredientCard {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -15,15 +15,15 @@
   box-sizing: border-box;
 }
 
-.ingredient-card:hover {
+.ingredientCard:hover {
   background-color: #9333ea;
 }
 
-.ingredient-card.selected {
+.ingredientCard.selected {
   background-color: #7e22ce;
 }
 
-.ingredient-card .image-placeholder {
+.ingredientCard .imagePlaceholder {
   height: 100%;
   aspect-ratio: 1/1;
   background-color: #d1d5db;
@@ -33,14 +33,14 @@
   position: relative;
 }
 
-.ingredient-card .ingredient-image {
+.ingredientCard .ingredientImage {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 0.375rem;
 }
 
-.ingredient-card .details {
+.ingredientCard .details {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -48,19 +48,19 @@
   margin-right: 1.4rem;
 }
 
-.ingredient-card .details .label {
+.ingredientCard .details .label {
   display: flex;
   flex-direction: row;
 }
 
-.ingredient-card .details h2 {
+.ingredientCard .details h2 {
   font-size: 1.25rem;
   font-weight: bold;
   padding-bottom: 0.3rem;
   margin: 0;
 }
 
-.ingredient-card .nutrition {
+.ingredientCard .nutrition {
   display: flex;
   flex-direction: column;
   padding: 0.2rem;
@@ -69,13 +69,13 @@
   gap: 0.1rem;
 }
 
-.ingredient-card .nutrition p {
+.ingredientCard .nutrition p {
   font-size: 0.875rem;
   line-height: 1.2;
   margin: 0;
 }
 
-.ingredient-card .macros {
+.ingredientCard .macros {
   display: flex;
   flex-direction: column;
   padding: 0.2rem;
@@ -84,7 +84,7 @@
   gap: 0.1rem;
 }
 
-.ingredient-card .macros p {
+.ingredientCard .macros p {
   font-size: 0.875rem;
   line-height: 1.5;
   margin: 0;
@@ -100,7 +100,7 @@
   border-radius: 50%;
 }
 
-.food-icon {
+.foodIcon {
   font-size: 1.5rem;
   line-height: 1;
 }
