Front end refinement

--- a/front-end/src/components/ui/ingredient-input/IngredientInput.module.css
+++ b/front-end/src/components/ui/ingredient-input/IngredientInput.module.css
@@ -25,3 +25,9 @@
 .searchInput:hover {
     border-color: #9333ea;
 }
+
+.resultsGrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    gap: 2rem;
+}
